# Apk

./: README.md  README.txt  README_DEVBOXAI.md  pyproject.toml
DevBoxAI/: .editorconfig  .gitignore  CHANGELOG.md  DevBoxAI.sln  LICENSE  README.md  build.ps1  build.sh
DevBoxAI/docs/: DEVELOPERS.md  QUICKSTART.md
DevBoxAI/src/DevBoxAI/: App.xaml  App.xaml.cs  DevBoxAI.csproj  MainWindow.xaml  MainWindow.xaml.cs
DevBoxAI/src/DevBoxAI.AI/: DevBoxAI.AI.csproj
DevBoxAI/src/DevBoxAI.AI/Services/: ClaudeCodeGenerationService.cs
DevBoxAI/src/DevBoxAI.AndroidGenerator/: DevBoxAI.AndroidGenerator.csproj  ProjectGenerator.cs
DevBoxAI/src/DevBoxAI.Core/: DevBoxAI.Core.csproj
DevBoxAI/src/DevBoxAI.Core/Models/: AndroidProject.cs  ChatMessage.cs  GenerationRequest.cs  PreviewState.cs
DevBoxAI/src/DevBoxAI.Core/Services/: IBuildService.cs  ICodeGenerationService.cs  IProjectService.cs
DevBoxAI/src/DevBoxAI/Converters/: BooleanToVisibilityConverter.cs  RoleToColorConverter.cs
DevBoxAI/src/DevBoxAI/Services/: BuildService.cs  ProjectService.cs
DevBoxAI/src/DevBoxAI/ViewModels/: MainViewModel.cs
docs/: pyforge_bug_audit.md  pyforge_enterprise_assessment.md  pyforge_performance_expansion.md  pyforge_plan.md
scripts/: install_pyforge.sh
src/pyforge/: __init__.py  agents.py  cli.py  errors.py  metrics.py  models.py  orchestrator.py  policy.py
tests/: test_orchestrator.py
