[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "pyforge"
version = "0.1.0"
description = "Python Multi-Agent Orchestrator"
readme = "README.md"
requires-python = ">=3.10"
authors = [{name = "PyForge Team"}]

[project.scripts]
pyforge = "pyforge.cli:main"

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
pythonpath = ["src"]
